import 'package:horizon/domain/entities/base_path.dart';

import 'package:rational/rational.dart';
import 'package:decimal/decimal.dart';

enum WalletType {
  horizon("Horizon", "Horizon Native"),
  bip32("BIP32", "Freewallet / Counterwallet / Rare Pepe Wallet");

  const WalletType(this.name, this.description);
  final String name;
  final String description;
}

extension WalletTypeX on WalletType {
  BasePath get basePath => switch (this) {
        WalletType.horizon => BasePath.horizon,
        WalletType.bip32 => BasePath.legacy
      };
}

enum ImportFormat {
  horizon("Horizon", "Horizon Native"),
  // legacy("Legacy", "BIP44,P2PKH,Base58"),
  freewallet("Freewallet", "Freewallet (BIP39)"),

  counterwallet("Counterwallet", "Freewallet / Counterwallet");

  const ImportFormat(this.name, this.description);
  final String name;
  final String description;
}

enum ImportAddressPkFormat {
  segwit("Segwit", "Segwit (bc1q)"),
  legacy("Legacy", "Legacy (1)");

  const ImportAddressPkFormat(this.name, this.description);
  final String name;
  final String description;
}

enum IssuanceActionType {
  reset,
  lockDescription,
  lockQuantity,
  changeDescription,
  issueMore,
  issueSubasset,
  transferOwnership,
  dividend
}

const String kInactivityDeadlineKey = 'inactivityDeadline';

const String onboardingErrorMessage =
    'Something went wrong while opening your wallet. Please reach out to support@unspendablelabs.com or the Horizon Telegram channel https://t.me/horizonxcp for support.';

enum BalanceType {
  all,
  utxo,
  address,
}

enum TransactionType { send, lockQuantity }

class TenToTheEigth {
  static const int value = 100000000;
  static const double doubleValue = 100000000.0;
  static const String stringValue = "100000000";
  static BigInt bigIntValue = BigInt.from(100000000);
  static Rational rational = Rational(bigIntValue);
  static Decimal decimal = Decimal.parse(stringValue);
}

final dust = BigInt.from(546);
