...
              HorizonUI.HorizonCancelButton(
                onPressed: () => onBack(),
                buttonText: 'BACK',
              ),
              HorizonUI.HorizonContinueButton(
                onPressed: () => onContinue(),
                buttonText: passwordRequired ? 'CONTINUE' : 'SUBMIT',
              ),
            ],
          ),
        ]),
      );
    });
...
